--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <main id="full-site">
     
     <div class="photos">
-      <div class="explain">Press on photo to reveal!</div>
+      <div class="explain">Tap on photo to reveal!</div>
   <div class="photo-container">
         <div class="photo">
           
